<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/calendar_legend_day1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/calendar_legend_day7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="@color/gray"
        android:textSize="14sp" />

</LinearLayout>